--- a/erizoClient/example.html
+++ b/erizoClient/example.html
@@ -1,9 +1,13 @@
 <html>
 <head>
 <title>Lynckia Client Test</title>
+<script type="text/javascript" src="roap_on_jsep.js"></script>
 <script type="text/javascript" src="L.js"></script>
+<script type="text/javascript" src="L.Utils.js"></script>
 <script type="text/javascript" src="example.js"></script>
 </head>
 <body>
+	<div id="pepito" style="width:100%; height:100%">
+	</div>
 </body>
 </html>
