--- a/erizoClient/example.html
+++ b/erizoClient/example.html
@@ -3,7 +3,8 @@
 <title>Lynckia Client Test</title>
 <script type="text/javascript" src="roap_on_jsep.js"></script>
 <script type="text/javascript" src="L.js"></script>
-<script type="text/javascript" src="L.Utils.js"></script>
+<script type="text/javascript" src="L.Logger.js"></script>
+<script type="text/javascript" src="L.HTML.js"></script>
 <script type="text/javascript" src="example.js"></script>
 </head>
 <body>
