'Publish' on client side

--- a/erizoClient/example.html
+++ b/erizoClient/example.html
@@ -2,8 +2,11 @@
 <head>
 <title>Lynckia Client Test</title>
 <script type="text/javascript" src="roap_on_jsep.js"></script>
+<script type="text/javascript" src="socket.io.js"></script>
 <script type="text/javascript" src="L.js"></script>
 <script type="text/javascript" src="L.Logger.js"></script>
+<script type="text/javascript" src="L.Base64.js"></script>
+<script type="text/javascript" src="L.Comm.js"></script>
 <script type="text/javascript" src="L.HTML.js"></script>
 <script type="text/javascript" src="example.js"></script>
 </head>
