Several changes on client side

--- a/erizoClient/example.html
+++ b/erizoClient/example.html
@@ -1,17 +1,20 @@
 <html>
 <head>
 <title>Lynckia Client Test</title>
+<script type="text/javascript" src="lib/nuve.js"></script>
 <script type="text/javascript" src="roap_on_jsep.js"></script>
 <script type="text/javascript" src="socket.io.js"></script>
-<script type="text/javascript" src="L.js"></script>
+<script type="text/javascript" src="Events.js"></script>
+<script type="text/javascript" src="Stream.js"></script>
+<script type="text/javascript" src="Publisher.js"></script>
+<script type="text/javascript" src="Room.js"></script>
 <script type="text/javascript" src="L.Logger.js"></script>
 <script type="text/javascript" src="L.Base64.js"></script>
-<script type="text/javascript" src="L.Comm.js"></script>
 <script type="text/javascript" src="L.HTML.js"></script>
 <script type="text/javascript" src="example.js"></script>
 </head>
 <body>
-	<div id="pepito" style="width:100%; height:100%">
+	<div id="pepito" style="width:160px; height:120px">
 	</div>
 </body>
 </html>
