Resolved a new bug during compilation

--- a/erizoClient/test/example.html
+++ b/erizoClient/test/example.html
@@ -3,7 +3,7 @@
     <title>Lynckia Client Test</title>
     <link href='css/style.css' rel='stylesheet' />
     <script type="text/javascript" src="http://chotis2.dit.upm.es/nuve/nuve.js"></script>
-    <script type="text/javascript" src="dist/erizo.js"></script>
+    <script type="text/javascript" src="lib/erizo.js"></script>
     <script type="text/javascript" src="example.js"></script>
 </head>
 <body>
