Several changes: new link in logo, new layout behaviour, ...

--- a/erizoClient/test/example.html
+++ b/erizoClient/test/example.html
@@ -3,7 +3,18 @@
     <title>Lynckia Client Test</title>
     <link href='css/style.css' rel='stylesheet' />
     <script type="text/javascript" src="http://chotis2.dit.upm.es/nuve/nuve.js"></script>
-    <script type="text/javascript" src="lib/erizo.js"></script>
+    <script type="text/javascript" src="../lib/roap_on_jsep.js"></script>
+    <script type="text/javascript" src="../lib/socket.io.js"></script>
+    <script type="text/javascript" src="../src/utils/L.Base64.js"></script>
+    <script type="text/javascript" src="../src/utils/L.Logger.js"></script>
+    <script type="text/javascript" src="../src/Events.js"></script>
+    <script type="text/javascript" src="../src/views/View.js"></script>
+    <script type="text/javascript" src="../src/views/Bar.js"></script>
+    <script type="text/javascript" src="../src/views/Speaker.js"></script>
+    <script type="text/javascript" src="../src/views/VideoPlayer.js"></script>
+    <script type="text/javascript" src="../src/Stream.js"></script>
+    <script type="text/javascript" src="../src/Publisher.js"></script>
+    <script type="text/javascript" src="../src/Room.js"></script>
     <script type="text/javascript" src="example.js"></script>
 </head>
 <body>
@@ -22,6 +33,24 @@
         </div>
 
         <div id="vid4" class="coolstyle">
+        </div>
+
+        <div id="vid5" class="coolstyle hide">
+        </div>
+
+        <div id="vid6" class="coolstyle hide">
+        </div>
+
+        <div id="vid7" class="coolstyle hide">
+        </div>
+
+        <div id="vid8" class="coolstyle hide">
+        </div>
+
+        <div id="vid9" class="coolstyle hide">
+        </div>
+
+        <div id="vid10" class="coolstyle hide">
         </div>
 
         <img src="images/star.svg" class="footerstyle"/>
