Now the test app accesses the number of users in each room

--- a/erizoClient/test/index.html
+++ b/erizoClient/test/index.html
@@ -26,25 +26,25 @@
             Choose a videoconference room to join it:
         </div>
        
-        <div id="room1" class="coolstyle">
+        <div id="room1" class="coolstyle room">
             <div class="roomtext">
                 Room 1
             </div>
         </div>
 
-        <div id="room2" class="coolstyle">
+        <div id="room2" class="coolstyle room">
             <div class="roomtext">
                 Room 2
             </div>
         </div>
 
-        <div id="room3" class="coolstyle">
+        <div id="room3" class="coolstyle room">
             <div class="roomtext">
                 Room 3
             </div>
         </div>
 
-        <div id="room4" class="coolstyle">
+        <div id="room4" class="coolstyle room">
             <div class="roomtext">
                 Room 4
             </div>
