--- a/test/streaming/public/publisher.html
+++ b/test/streaming/public/publisher.html
@@ -17,14 +17,14 @@ be found in the AUTHORS file in the root of the source tree.
 <title>WebRTC Publisher</title>
 <!--
 <style type="text/css">
-	body, input, button, select, table {
-	  font-family:"Lucida Grande", "Lucida Sans", Verdana, Arial, sans-serif;
-	  font-size: 13 px;
-	}
-	body, input:enable, button:enable, select:enable, table {
-	  color: rgb(51, 51, 51);
-	}
-	h1 {font-size: 40 px;}
+  body, input, button, select, table {
+    font-family:"Lucida Grande", "Lucida Sans", Verdana, Arial, sans-serif;
+    font-size: 13 px;
+  }
+  body, input:enable, button:enable, select:enable, table {
+    color: rgb(51, 51, 51);
+  }
+  h1 {font-size: 40 px;}
 </style>
 -->
 
@@ -39,18 +39,11 @@ be found in the AUTHORS file in the root of the source tree.
 
 // TODO: Catch more exceptions
 
-var server;
 var socket;
-var myName;
-var remoteId = -1;
-var remoteName;
 var pc = null;
 var localStream = null;
 var callState = 0; // 0 - Not started, 1 - Call ongoing
 var sdp1;
-
-var publisher = 'publisher';
-
 
 // General
 
@@ -69,7 +62,7 @@ function toggleExtraButtons() {
 }
 
 function trace(txt) {
-	console.log(txt);
+  console.log(txt);
 }
 
 function trace_warning(txt) {
@@ -103,7 +96,7 @@ function gotStream(s) {
   document.getElementById("localView").src = url;
   trace("User has granted access to local media. url = " + url);
   localStream = s;
-  connect();
+  signIn();
 }
 
 function gotStreamFailed(error) {
@@ -126,43 +119,48 @@ function getUserMedia() {
 // Call control
 
 function createPeerConnection() {
-	if (pc) {
-		trace_warning("PeerConnection object already exists");
-	}
-	trace("Creating PeerConnection object");
-	try {
+  if (pc) {
+    trace_warning("PeerConnection object already exists");
+  }
+  trace("Creating PeerConnection object");
+  try {
 
-	pc = new RoapConnection("STUN stun.l.google.com:19302", onSignalingMessage);
-	pc.onaddstream = onAddStream;
-	pc.onremovestream = onRemoveStream;
-	} catch (e) {
-		trace_exception(e, "Create PeerConnection error");
-	}
+    pc = new RoapConnection("STUN stun.l.google.com:19302", function(offer){
+      socket.emit('publish', 'offer', offer, function (answer, id) {
+          pc.onsignalingmessage = function (ok) {
+              pc.onsignalingmessage = function() {};
+              socket.emit('publish', 'ok', ok);
+          };
+          pc.processSignalingMessage(answer);
+      });
+    });
+
+    pc.onaddstream = onAddStream;
+    pc.onremovestream = onRemoveStream;
+  } catch (e) {
+    trace_exception(e, "Create PeerConnection error");
+  }
 }
 
 function doCall() {
-	createPeerConnection();
-	trace("Adding stream");
-	pc.addStream(localStream);
+  createPeerConnection();
+  trace("Adding stream");
+  pc.addStream(localStream);
 }
 
 function hangUp() {
-	trace("Sending BYE to " + remoteName + " (ID " + remoteId + ")");
-	sendToPeer("BYE");
-	closeCall();
+  closeCall();
 }
 
 function closeCall() {
-	trace("Stopping showing local stream");
-	document.getElementById("localView").src = "dummy";
-	if (pc) {
-		trace("Stopping call [pc.close()]");
-		pc.close();
-		pc = null;
-	} else
-		trace("No pc object to close");
-	remoteId = -1;
-	setCallState(0);
+  trace("Stopping showing local stream");
+  document.getElementById("localView").src = "dummy";
+  if (pc) {
+    trace("Stopping call [pc.close()]");
+    pc.close();
+    pc = null;
+  } else
+    trace("No pc object to close");
 }
 
 
@@ -177,81 +175,23 @@ function onRemoveStream(e) {
   trace("Stopped showing remote stream");
 }
 
-function onSignalingMessage(msg) {
-	sendToPeer(msg);
-}
 
-
-// TODO: Add callbacks onconnecting, onopen and onstatechange.
-
-// Server interaction
-
-function handlePeerMessage(msg) {
-	
-  trace("Received message:\n" + msg);
-  // Assuming we receive the message from the peer we want to communicate with.
-  // TODO: Only accept messages from peer we communicate with with if call is
-  // ongoing.
-  if (msg.search("BYE") == 0) {
-    // Other side has hung up.
-    closeCall()
-  } else {
-    if (!pc) {
-      // Other side is calling us, startup
-      createPeerConnection();
-      try {
-        pc.processSignalingMessage(msg);
-      } catch (e) {
-        trace_exception(e, "Process signaling message error");
-      }
-      trace("Adding stream");
-      pc.addStream(localStream);
-    } else {
-      try {
-	    trace("Processing message");
-        pc.processSignalingMessage(msg);
-      } catch (e) {
-        trace_exception(e, "Process signaling message error");
-      }
-    }
-  }
-}
-
-
-function sendToPeer(data) {
-  socket.emit('unicast','publisher',data);
-}
 
 function signIn() {
   try {
-    socket = io.connect(server);
-    socket.on('message', handlePeerMessage);
+    socket = io.connect('/');
 
-    console.log("Connecting with ID " + myName); 
-    socket.emit('nickname', myName, function (set){
-      console.log("Respuesta nickname: "+ set);
-      doCall();
+    socket.emit('initConnection', function (response, streams) {
+      if (response == 'success') {
+        doCall();
+      }
     });
   } catch (e) { 
     trace_exception(e, "Start sign in error");
   }
 }
 
-function connect() {
-  myName = Math.floor(Math.random()*1111111);
-  server = "/";//"http://hpcm.dit.upm.es:8081";
-  if (myName.length == 0) {
-    alert("I need a name please.");
-    document.getElementById("local").focus();
-  } else {
-    // TODO: Disable connect button here, but we need a timeout and check if we
-    // have connected, if so enable it again.
-    signIn();
-  }
-}
-
 function disconnect() {
-  if (callState == 1)
     hangUp();
 }
 
