--- a/test/public/subscriber.html
+++ b/test/public/subscriber.html
@@ -34,6 +34,7 @@ be found in the AUTHORS file in the root of the source tree.
 <script src="/socket.io/socket.io.js"></script>
 <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
 <script src="roap_on_jsep.js"></script>
+<script src="erizo_on_jsep.js"></script>
 
 <script type="text/javascript">
 
@@ -96,7 +97,7 @@ function createPeerConnection() {
   trace("Creating PeerConnection object");
   try {
 
-    pc = new RoapConnection("STUN stun.l.google.com:19302", function(offer) {
+    pc = new ErizoPeerConnection(function(offer) {
       socket.emit('subscribe', streamID, offer, function (answer) {
         pc.processSignalingMessage(answer);
       });
