--- a/test/public/index.html
+++ b/test/public/index.html
@@ -22,6 +22,7 @@ be found in the AUTHORS file in the root of the source tree.
 <script src="/socket.io/socket.io.js"></script>
 <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
 <script src="roap_on_jsep.js"></script>
+<script src="erizo_on_jsep.js"></script>
 
 <script type="text/javascript">
 // TODO: Catch more exceptions
@@ -98,7 +99,7 @@ function gotStreamFailed(error) {
 
 function getUserMedia() {
   try {
-    navigator.webkitGetUserMedia({video:true, audio:true}, gotStream, gotStreamFailed);
+    ErizoGetUserMedia({video:true, audio:true}, gotStream, gotStreamFailed);
     trace("Requested access to local media");
   } catch (e) {
     trace_exception(e, "getUserMedia error");
@@ -114,7 +115,7 @@ function createPeerConnection() {
     }
     trace("Creating PeerConnection object");
     try {
-      myPC = new RoapConnection("STUN stun.l.google.com:19302", function(offer){
+      myPC = new ErizoPeerConnection(function(offer){
         socket.emit('publish', 'offer', offer, function (answer, id) {
             myPC.onsignalingmessage = function (ok) {
                 myPC.onsignalingmessage = function() {};
@@ -157,7 +158,7 @@ function createSubscriberPC(streamID) {
 
   try {
 
-    PCs[streamID] = new RoapConnection("STUN stun.l.google.com:19302", function(offer) {
+    PCs[streamID] = new ErizoPeerConnection(function(offer) {
       socket.emit('subscribe', streamID, offer, function (answer) {
         PCs[streamID].processSignalingMessage(answer);
       });
