--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <a href="https://github.com/ging/lynckia"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub"></a>
 
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
@@ -29,6 +28,9 @@
  </head>
 
   <body data-spy="scroll" data-target=".bs-docs-sidebar" data-twttr-rendered="true">
+
+
+    <a href="https://github.com/ging/lynckia"><img style="position: absolute; top: 0; left: 0; border: 0; z-index: 3" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub"></a>
 
     <!-- Navbar
     ================================================== -->
