I changed the position of ribbon and fork button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body data-spy="scroll" data-target=".bs-docs-sidebar" data-twttr-rendered="true">
 
 
-    <a href="https://github.com/ging/lynckia"><img style="position: absolute; top: 0; left: 0; border: 0; z-index: 3" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/ging/lynckia"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 3" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
     <!-- Navbar
     ================================================== -->
@@ -93,6 +93,13 @@
       <li class="tweet-btn">
         <iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/tweet_button.1345016233.html#_=1345640025419&amp;count=horizontal&amp;id=twitter-widget-0&amp;lang=en&amp;original_referer=http%3A%2F%2Flynckia-api.appspot.com&amp;related=Ging%3ACreator%20of%20Lynckia&amp;size=m&amp;text=Lynckia&amp;url=http%3A%2F%2Flynckia-api.appspot.com&amp;via=lynckia" class="twitter-share-button twitter-count-horizontal" style="width: 110px; height: 20px; " title="Twitter Tweet Button"></iframe>
       </li>
+
+      <li class="github-btns">
+        <iframe src="http://ghbtns.com/github-btn.html?user=ging&repo=lynckia&type=fork"
+        allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=ging&repo=lynckia&type=watch&count=true"
+        allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
+      </li>
     </ul>
   </div>
 </div>
@@ -124,10 +131,7 @@
 
     <h1>Building your own conference provider.</h1>
 
-    <iframe src="http://ghbtns.com/github-btn.html?user=ging&repo=lynckia&type=fork"
-    allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
-    <iframe src="http://ghbtns.com/github-btn.html?user=ging&repo=lynckia&type=watch&count=true"
-    allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
+    
 
     <br/>
 
