--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body data-spy="scroll" data-target=".bs-docs-sidebar" data-twttr-rendered="true">
 
 
-    <a href="https://github.com/ging/lynckia"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 1031" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/ging/lynckia"><img style="position: fixed; top: 0; right: 0; border: 0; z-index: 1031" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
     <!-- Navbar
     ================================================== -->
@@ -91,7 +91,7 @@
         <iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/follow_button.1345016233.html#_=1345640025492&amp;id=twitter-widget-2&amp;lang=en&amp;screen_name=lynckia&amp;show_count=true&amp;show_screen_name=true&amp;size=m" class="twitter-follow-button" style="width: 242px; height: 20px; " title="Twitter Follow Button"></iframe>
       </li>
       <li class="tweet-btn">
-        <iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/tweet_button.1345016233.html#_=1345640025419&amp;count=horizontal&amp;id=twitter-widget-0&amp;lang=en&amp;original_referer=http%3A%2F%2Flynckia-api.appspot.com&amp;related=Ging%3ACreator%20of%20Lynckia&amp;size=m&amp;text=Lynckia&amp;url=http%3A%2F%2Flynckia-api.appspot.com&amp;via=lynckia" class="twitter-share-button twitter-count-horizontal" style="width: 110px; height: 20px; " title="Twitter Tweet Button"></iframe>
+        <iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/tweet_button.1345016233.html#_=1345640025419&amp;count=horizontal&amp;id=twitter-widget-0&amp;lang=en&amp;original_referer=http%3A%2F%2Flynckia-api.appspot.com&amp;related=Ging%3ACreator%20of%20Lynckia&amp;size=m&amp;text=Lynckia&amp;url=http%3A%2F%2Flynckia.com&amp;via=lynckia" class="twitter-share-button twitter-count-horizontal" style="width: 110px; height: 20px; " title="Twitter Tweet Button"></iframe>
       </li>
 
       <li class="github-btns">
