Resolved a bug in the architecture section

--- a/architecture.html
+++ b/architecture.html
@@ -4,6 +4,8 @@ title: Architecture
 architecture: true
 ---
 
+<link href="assets/css/architecture.css" rel="stylesheet">
+
 <!-- Subhead
 ================================================== -->
 <header class="jumbotron subhead" id="overview">
