--- a/install.html
+++ b/install.html
@@ -22,12 +22,10 @@ install: true
       <div class="span3 bs-docs-sidebar">
         <ul class="nav nav-list bs-docs-sidenav">
           <li><a href="#requirements"><i class="icon-chevron-right"></i> Requirements</a></li>
-          <li><a href="#clone"><i class="icon-chevron-right"></i> Clone Lynckia code</a></li>
+          <li><a href="#clone"><i class="icon-chevron-right"></i> Clone the code</a></li>
           <li><a href="#dependencies"><i class="icon-chevron-right"></i> Dependencies</a></li>
           <li><a href="#lynckia"><i class="icon-chevron-right"></i> Lynckia</a></li>
           <li><a href="#basic-example"><i class="icon-chevron-right"></i> Basic Example</a></li>
-          <li><a href="#init-lynckia"><i class="icon-chevron-right"></i> Init Lynckia</a></li>
-          <li><a href="#init-basic-example"><i class="icon-chevron-right"></i> Init Basic Example</a></li>
           <li><a href="#test"><i class="icon-chevron-right"></i> Test it!</a></li>
         </ul>
       </div>
@@ -129,42 +127,25 @@ git clone https://github.com/ging/lynckia.git
 </pre>
         </section>
 
-        <!-- Init Lynckia
-        ================================================== -->
-        <section id="init-lynckia">
-          <div class="page-header">
-            <h1>6. Run Lynckia Services</h1>
-          </div>
-          <p class="lead"> This step will initialize all Lynckia components.</p>
-          <div class="bs-docs-example">
-            You will only need to execute the next command. It does not depends on the Operating System.
-            </div>
-<pre class="prettyprint linenums">
-./lynckia/scripts/initLynckia.sh
-</pre>
-        </section>
-
-        <!-- Init Basic Example
-        ================================================== -->
-        <section id="init-basic-example">
-          <div class="page-header">
-            <h1>7. Run the basic Example</h1>
-          </div>
-          <p class="lead"> This step will initialize the basic example.</p>
-          <div class="bs-docs-example">
-            You will only need to execute the next command. It does not depends on the Operating System.
-            </div>
-<pre class="prettyprint linenums">
-./lynckia/scripts/initBasicExample.sh
-</pre>
-        </section>
-
         <!-- Test
         ================================================== -->
         <section id="test">
           <div class="page-header">
             <h1>8. Test Lynckia!<h1>
           </div>
+          <p class="lead"> At this time you have already installed in your computer Lynckia and a basic videoconference example to test it. Let's run them.</p>
+          <div class="bs-docs-example">
+            This step will initialize all Lynckia components.
+            </div>
+<pre class="prettyprint linenums">
+./lynckia/scripts/initLynckia.sh
+</pre>
+          <div class="bs-docs-example">
+            This step will initialize the basic example.
+            </div>
+<pre class="prettyprint linenums">
+./lynckia/scripts/initBasicExample.sh
+</pre>
           <p class="lead"> Now you can connect to localhost:3004 and test your basic videoconference example!</p>
         </section>
 
