Updated install instructions

--- a/install.html
+++ b/install.html
@@ -22,7 +22,7 @@ install: true
       <div class="span3 bs-docs-sidebar">
         <ul class="nav nav-list bs-docs-sidenav">
           <li><a href="#requirements"><i class="icon-chevron-right"></i> Requirements</a></li>
-          <li><a href="#clone"><i class="icon-chevron-right"></i> Clone the code</a></li>
+          <li><a href="#clone"><i class="icon-chevron-right"></i> The code</a></li>
           <li><a href="#dependencies"><i class="icon-chevron-right"></i> Dependencies</a></li>
           <li><a href="#lynckia"><i class="icon-chevron-right"></i> Lynckia</a></li>
           <li><a href="#basic-example"><i class="icon-chevron-right"></i> Basic Example</a></li>
@@ -146,7 +146,7 @@ git clone https://github.com/ging/lynckia.git
 <pre class="prettyprint linenums">
 ./lynckia/scripts/initBasicExample.sh
 </pre>
-          <p class="lead"> Now you can connect to localhost:3004 and test your basic videoconference example!</p>
+          <p class="lead"> Now you can connect to "localhost:3004" and test your basic videoconference example!</p>
         </section>
 
         <!-- Next
