Updated install instructions

--- a/install.html
+++ b/install.html
@@ -104,7 +104,7 @@ git clone https://github.com/ging/lynckia.git
           <p class="lead"> This step will install all Lynckia components.</p>
           <p>These components are: Erizo, Erizo API, Erizo Controller and Nuve.</p>
           <div class="bs-docs-example">
-            You will only need to execute these commands. They do not depends on the Operating System.
+            You will only need to execute these commands. They do not depend on the Operating System.
             </div>
 <pre class="prettyprint linenums">
 ./lynckia/scripts/installErizo.sh
@@ -120,7 +120,7 @@ git clone https://github.com/ging/lynckia.git
           </div>
           <p class="lead"> This step will install a basic test example.</p>
           <div class="bs-docs-example">
-            You will only need to execute the next command. It does not depends on the Operating System.
+            You will only need to execute the next command. It does not depend on the Operating System.
             </div>
 <pre class="prettyprint linenums">
 ./lynckia/scripts/installBasicExample.sh
@@ -146,7 +146,7 @@ git clone https://github.com/ging/lynckia.git
 <pre class="prettyprint linenums">
 ./lynckia/scripts/initBasicExample.sh
 </pre>
-          <p class="lead"> Now you can connect to "localhost:3004" and test your basic videoconference example!</p>
+          <p class="lead"> Now you can connect to "localhost:3001" and test your basic videoconference example!</p>
         </section>
 
         <!-- Next
