Added documentation and post about erizofc

--- a/client-api.html
+++ b/client-api.html
@@ -611,9 +611,9 @@ stream.addEventListener("stream-data", function(evt){
         ================================================== -->
         <section id="erizofc">
           <div class="page-header">
-            <h1>Initialize</h1>
+            <h1>Node.js client</h1>
           </div>
-          <p class="lead">Run erizo clients in your node.js applications.</p>
+          <p class="lead">Running erizo clients in your node.js applications.</p>
           <p>You can also run erizo clients in your node.js applications with the same API explained here. You can connect to rooms, publish and subscribe to streams and manage events. You need only to import the node module <b>erizofc.js</b></p>
           <pre class="prettyprint linenums">
 var Erizo = require('.erizofc');</pre>
