I added new Christmas logo and I changed the Nav Bar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ home: true
 <div class="jumbotron masthead">
   <div class="container">
     <img src="assets/img/logo.svg" alt="Lynckia">
-    <img src="assets/img/star.svg" alt="Lynckia" class="hidden-phone hidden-tablet star">
+    <!--<img src="assets/img/star.svg" alt="Lynckia" class="hidden-phone hidden-tablet star">-->
+    <img src="assets/img/star-christmas.png" alt="Lynckia" class="hidden-phone hidden-tablet star">
     <p>Connect your users with videoconference in their browsers.</p>
     <p><a href="./getting-started.html" class="btn btn-primary btn-large hidden-phone hidden-tablet">Start Using it!</a></p>
     <ul class="masthead-links">
