--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Lynckia HTML5 Communication Provider
 home: true
 ---
 
-<div class="jumbotron masthead">
+<div class="jumbotron masthead christmas">
   <div class="container">
     <img src="assets/img/logo.svg" alt="Lynckia">
     <!--<img src="assets/img/star.svg" alt="Lynckia" class="hidden-phone hidden-tablet star">-->
