--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ title: Lynckia HTML5 Communication Provider
 home: true
 ---
 
-<div class="jumbotron masthead christmas">
+<div class="jumbotron masthead">
+<!--<div class="jumbotron masthead christmas">-->
   <div class="container">
     <img src="assets/img/logo.svg" alt="Lynckia">
-    <!--<img src="assets/img/star.svg" alt="Lynckia" class="hidden-phone hidden-tablet star">-->
-    <img src="assets/img/star-christmas.png" alt="Lynckia" class="hidden-phone hidden-tablet star">
+    <img src="assets/img/star.svg" alt="Lynckia" class="hidden-phone hidden-tablet star">
+    <!--<img src="assets/img/star-christmas.png" alt="Lynckia" class="hidden-phone hidden-tablet star">-->
     <p>Connect your users with videoconference in their browsers.</p>
     <p><a href="./getting-started.html" class="btn btn-primary btn-large hidden-phone hidden-tablet">Start Using it!</a></p>
     <ul class="masthead-links">
