--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ home: true
     <img src="assets/img/logo.svg" alt="Lynckia">
     <img src="assets/img/star.svg" alt="Lynckia" class="hidden-phone hidden-tablet star">
     <!--<img src="assets/img/star-christmas.png" alt="Lynckia" class="hidden-phone hidden-tablet star">-->
-    <p>Connect your users with videoconference in their browsers.</p>
+    <p>Open Source WebRTC Communications Provider.</p>
     <p><a href="./getting-started.html" class="btn btn-primary btn-large hidden-phone hidden-tablet">Start Using it!</a></p>
     <ul class="masthead-links">
       <li>Beta version</li>
